Bigger update regarding highlight and overall refractoring, but some of the logic is not working correctly right now.