@@ -7,89 +7,97 @@ import java.util.Stack;
 
 public class GameManager {
     private static final int BOARD_SIZE = 8;
-    private String[][] board; // "empty", "black", "white"
-    private String currentPlayer; // "black" or "white"
-    private Stack<GameState> history;
+    private static final int [][] DIRECTIONS = {
+            {-1,0},{1,0},{0,-1},{0,1},
+            {-1,-1},{-1,1},{1,-1},{1,1}
+    };
+
+    private CellButton.CellState[][] board; // "empty", "black", "white"
+    private CellButton.CellState currentPlayer; // "black" or "white"
+    private final Stack<GameState> history;
+    private CellButton.CellState aiColor; // Variable to store the AI color
 
     public GameManager() {
-        board = new String[BOARD_SIZE][BOARD_SIZE];
+        board = new CellButton.CellState[BOARD_SIZE][BOARD_SIZE];
         history = new Stack<>();
-        currentPlayer = "black"; // Black starts the game
+        currentPlayer = CellButton.CellState.BLACK; // Black starts the game
+        aiColor = CellButton.CellState.WHITE; //Default AI color, can be changed with setAiColor()
         initializeBoard();
+    }
+    public void setAiColor (CellButton.CellState aiColor) {
+        this.aiColor = aiColor;
+    }
+
+    public CellButton.CellState getAiColor () {
+        return aiColor;
     }
 
     private void initializeBoard() {
         for (int row = 0; row < BOARD_SIZE; row++) {
             for (int col = 0; col < BOARD_SIZE; col++) {
-                board[row][col] = "empty";
+                board[row][col] = CellButton.CellState.EMPTY;
             }
         }
 
         // Set the initial 4 pieces in the center
-        board[3][3] = "white";
-        board[3][4] = "black";
-        board[4][3] = "black";
-        board[4][4] = "white";
+        board[3][3] = CellButton.CellState.WHITE;
+        board[3][4] = CellButton.CellState.BLACK;
+        board[4][3] = CellButton.CellState.BLACK;
+        board[4][4] = CellButton.CellState.WHITE;
     }
 
-    public String getCell(int row, int col) {
+    public CellButton.CellState getCell(int row, int col) {
         return board[row][col];
     }
 
-    public void setCell(int row, int col, String color) {
-        board[row][col] = color;
-    }
-
-    public String getCurrentPlayer() {
+    public CellButton.CellState getCurrentPlayer() {
         return currentPlayer;
     }
 
     public void switchPlayer() {
-        currentPlayer = currentPlayer.equals("black") ? "white" : "black";
+        currentPlayer = (currentPlayer == CellButton.CellState.BLACK)
+                        ? CellButton.CellState.WHITE
+                        : CellButton.CellState.BLACK;
     }
 
     public boolean isValidMove(int row, int col) {
-        if (!board[row][col].equals("empty")) {
+        if (board[row][col] != CellButton.CellState.EMPTY) {
             return false; // Cell is already occupied
         }
 
         // Check if the move will flip at least one piece
-        return canFlip(row, col, currentPlayer);
+        return canFlip(row, col, currentPlayer); //Checks if any pieces can be flipped
     }
 
-    private boolean canFlip(int row, int col, String player) {
-        String opponent = player.equals("black") ? "white" : "black";
+    private boolean canFlip(int row, int col, CellButton.CellState player) {
+        CellButton.CellState opponent = (player == CellButton.CellState.BLACK)
+                                            ? CellButton.CellState.WHITE
+                                            : CellButton.CellState.BLACK;
 
-        // Check all 8 directions
-        int[][] directions = {
-                {-1, 0}, {1, 0}, {0, -1}, {0, 1}, // Vertical and horizontal
-                {-1, -1}, {-1, 1}, {1, -1}, {1, 1} // Diagonal
-        };
-
-        for (int[] dir : directions) {
+        // Directions array
+        for (int [] dir : DIRECTIONS) {
             int r = row + dir[0], c = col + dir[1];
             boolean hasOpponent = false;
 
-            while (isInBounds(r, c) && board[r][c].equals(opponent)) {
+            while (isInBounds(r, c) && board[r][c] == opponent) {
                 hasOpponent = true;
-                r += dir[0];
-                c += dir[1];
+                r += dir [0];
+                c += dir [1];
             }
 
-            if (hasOpponent && isInBounds(r, c) && board[r][c].equals(player)) {
-                return true; // Valid move
+            if (hasOpponent && isInBounds(r, c) && board[r][c] == player){
+                return true; //Valid move
             }
         }
-
         return false;
     }
 
     public void makeMove(int row, int col) {
-        history.push(new GameState(board, currentPlayer));
         if (!isValidMove(row, col)) {
             throw new IllegalArgumentException("Invalid move");
         }
 
+        history.push(new GameState(copyBoard(), currentPlayer)); //Save state
         board[row][col] = currentPlayer;
         flipPieces(row, col, currentPlayer);
         switchPlayer();
@@ -99,34 +107,35 @@ public class GameManager {
         if (!history.isEmpty()) {
             // Revert to the previous state
             GameState previousState = history.pop();
-            this.board = previousState.board();
-            this.currentPlayer = previousState.currentPlayer();
+            this.board = previousState.getBoard();
+            this.currentPlayer = previousState.getCurrentPlayer();
         }
     }
 
-    private void flipPieces(int row, int col, String player) {
-        String opponent = player.equals("black") ? "white" : "black";
+    public boolean isGameOver() {
+        return hasValidMoves(CellButton.CellState.BLACK) && hasValidMoves((CellButton.CellState.WHITE));
+    }
 
-        int[][] directions = {
-                {-1, 0}, {1, 0}, {0, -1}, {0, 1},
-                {-1, -1}, {-1, 1}, {1, -1}, {1, 1}
-        };
+    private void flipPieces(int row, int col, CellButton.CellState player) {
+        CellButton.CellState opponent = (player == CellButton.CellState.BLACK)
+                                        ? CellButton.CellState.WHITE
+                                        : CellButton.CellState.BLACK;
 
-        for (int[] dir : directions) {
+        for (int[] dir : DIRECTIONS) {
             int r = row + dir[0], c = col + dir[1];
             boolean hasOpponent = false;
 
-            while (isInBounds(r, c) && board[r][c].equals(opponent)) {
+            while (isInBounds(r, c) && board[r][c] == opponent) {
                 hasOpponent = true;
                 r += dir[0];
                 c += dir[1];
             }
 
-            if (hasOpponent && isInBounds(r, c) && board[r][c].equals(player)) {
+            if (hasOpponent && isInBounds(r, c) && board[r][c] == player) {
                 // Flip pieces in this direction
                 r = row + dir[0];
                 c = col + dir[1];
-                while (board[r][c].equals(opponent)) {
+                while (board[r][c] == opponent) {
                     board[r][c] = player;
                     r += dir[0];
                     c += dir[1];
@@ -135,19 +144,23 @@ public class GameManager {
         }
     }
 
-    public boolean hasValidMoves(String player) {
+    public boolean hasValidMoves(CellButton.CellState currentPlayer) {
         for (int row = 0; row < BOARD_SIZE; row++) {
             for (int col = 0; col < BOARD_SIZE; col++) {
                 if (isValidMove(row, col)) {
-                    return true;
+                    return false;
                 }
             }
         }
-        return false;
+        return true;
     }
 
-    public boolean isGameOver() {
-        return !hasValidMoves("black") && !hasValidMoves("white");
+    private CellButton.CellState[][] copyBoard(){
+        CellButton.CellState[][] copy = new CellButton.CellState[BOARD_SIZE][BOARD_SIZE];
+        for (int row = 0; row < BOARD_SIZE; row++) {
+            System.arraycopy(board[row], 0, copy[row], 0,BOARD_SIZE);
+        }
+        return copy;
     }
 
     public String getWinner() {
@@ -155,9 +168,9 @@ public class GameManager {
 
         for (int row = 0; row < BOARD_SIZE; row++) {
             for (int col = 0; col < BOARD_SIZE; col++) {
-                if (board[row][col].equals("black")) {
+                if (board[row][col] == CellButton.CellState.BLACK) {
                     blackCount++;
-                } else if (board[row][col].equals("white")) {
+                } else if (board[row][col] == CellButton.CellState.WHITE) {
                     whiteCount++;
                 }
             }
@@ -193,12 +206,11 @@ public class GameManager {
         List<int[]> validMoves = getValidMoves();
         if (!validMoves.isEmpty()) {
             // AI makes the first valid move
-            int[] move = validMoves.get(0);
+            int[] move = validMoves.getFirst();
             makeMove(move[0], move[1]);
         }
     }
 
-    public void setAIColor(String black) {
-    }
+
 }
 
